# TransVib

./: .env  .gitignore  docker-compose.yml  pyproject.toml
services/backend/: backend.dockerfile  celeryworker.dockerfile
services/backend/app/: pyproject.toml  pytest.ini  worker-start.sh
services/backend/app/app/: celeryworker_pre_start.py  main.py  worker.py
services/backend/app/app/calc/csvalues/: cs_inertia.py  cs_torsion.py  frame_calculations.py  plot_omega.py  utils.py
services/backend/app/app/core/: celery_app.py  config.py  security.py
services/backend/app/app/db/: __init__.py
services/backend/app/app/db/functions/: __init__.py  base.py  csvalue.py  frame.py  initialise.py  point.py  segment.py  ship.py  user.py
services/backend/app/app/db/models/: __init__.py  models.py
services/backend/app/app/db/schemas/: __init__.py  csvalues.py  frames.py  msg.py  notes.py  points.py  segments.py  ships.py  token.py  users.py
services/backend/app/app/models/: Frame.py  point.py  ship.py
services/backend/app/app/schema/: __init__.py  frame.py  frame_csvalues.py  frame_point.py  frame_segment.py  msg.py  note.py  schema.py  ship.py  ships.py  types.py  user.py  users.py  utils.py
services/backend/app/migrations/models/: 0_20221123121201_init.py  1_20221202215145_change_point.py
services/backend/app/tests/: conftest.py
services/backend/app/tests/gql/: test_user.py
services/backend/app/tests/gql_tests/: test_csvalues.py  test_frame.py  test_frame_point.py  test_frame_segment.py  test_ship.py  test_user.py
services/backend/app/tests/tasks/: test_celery.py
services/backend/app/tests/utils/: utils.py
services/backend/app/tests/utils/misc/geometry/: import_dat_geomtry.py  regexes
services/backend/app/tests/utils/misc/geometry/yaml/: FR-01-VAR_01.yaml  FR-03-VAR1.yaml
services/frontend/: .graphqlconfig  Dockerfile  package-lock.json  package.json  schema.graphql  svelte.config.js  tailwind.config.cjs  vite.config.ts
services/frontend/src/components/: Sidebar.svelte
services/frontend/src/lib/components/: AddFramePopUp.svelte  Sidebar.svelte
services/frontend/src/lib/gql_actions/: mutations.ts
services/frontend/src/routes/: +layout.svelte  +page.server.js  +page.svelte  queries.ts
